# picow-fat16

./: CMakeLists.txt  LICENSE  README.md  compile.bash  install.bash  main.cpp
include/: fat.h  fat16.hpp  fat_standard.hpp  pico_flash.hpp  tusb_config.h  util.h  util.hpp
src/: fat.cpp  main.cpp  msc_disk.cpp  usb_descriptors.cpp  util.cpp
